--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,20 +7,22 @@ description = "Write your story with Markdown!"
 repository = "https://github.com/CatilGrass/MarkDialog"
 license-file = "LICENSE-MIT"
 readme = "README.md"
-keywords = ["dialog", "markdown", "avg_game"]
+keywords = ["dialog", "markdown"]
 categories = ["game-development"]
 publish = true
 
 [workspace]
 package.version = "0.1.0"
 members = [
-    "gen",       # Generate Resource
-    "gen/macros",
     "player",    # Dialog Player
     "converter"  # Markdown Converter
 ]
 
+[lib]
+proc-macro = true
+
 [dependencies]
-res_gen = { path = "gen" }
-markdialog_player = { path = "player" }
-markdialog_converter = { path = "converter" }
+syn = { version = "2.0", features = ["full", "visit-mut"] }
+quote = "1.0"
+proc-macro2 = "1.0"
+sha2 = "0.10"
